--- a/index.html
+++ b/index.html
@@ -279,124 +279,27 @@
           <div class="section-heading">
             <h2>Contact us</h2>
             <div class="heading-line"></div>
-            <p>If you have any question or just want to say 'hello' to Alstar web studio please fill out form below and
-              we will be get in touch with you within 24 hours. </p>
+            <p>Pour des raisons de vie privée et d’anonymat, le nom utilisé sur ce site et un alias. Si vous êtes une entreprise, un recruteur ou toute personne intéressée par mon profil, je vous remercie de bien vouloir me contacter à cette adresse paul.pont1@yahoo.com pour que nous puissions organiser un entretien physique ou vidéo, et/ou pour que je puisse vous faire suivre mes certifications authentiques avec plaisir. </p>
           </div>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-md-offset-2 col-md-8">
-          <div id="sendmessage">Your message has been sent. Thank you!</div>
-          <div id="errormessage"></div>
-
-          <form action="" method="post" class="form-horizontal contactForm" role="form">
-            <div class="col-md-offset-2 col-md-8">
-              <div class="form-group">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4"
-                  data-msg="Please enter at least 4 chars" />
-                <div class="validation"></div>
-              </div>
-            </div>
-
-            <div class="col-md-offset-2 col-md-8">
-              <div class="form-group">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email"
-                  data-msg="Please enter a valid email" />
-                <div class="validation"></div>
-              </div>
-            </div>
-
-            <div class="col-md-offset-2 col-md-8">
-              <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4"
-                  data-msg="Please enter at least 8 chars of subject" />
-                <div class="validation"></div>
-              </div>
-            </div>
-
-            <div class="col-md-offset-2 col-md-8">
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us"
-                  placeholder="Message"></textarea>
-                <div class="validation"></div>
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-md-offset-2 col-md-8">
-                <button type="submit" class="btn btn-theme btn-lg btn-block">Send message</button>
-              </div>
-            </div>
-          </form>
-
-        </div>
-      </div>
-
     </div>
   </section>
 
   <!-- Bottom widget -->
   <section id="bottom-widget" class="home-section bg-white">
     <div class="container">
-      <div class="row">
+      <div class="row" >
         <div class="col-md-4">
-          <div class="contact-widget wow bounceInLeft">
-            <i class="fa fa-map-marker fa-4x"></i>
-            <h5>Main Office</h5>
-            <p>
-              109 Borough High Street,<br />London SE1 1NL
-            </p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="contact-widget wow bounceInUp">
-            <i class="fa fa-phone fa-4x"></i>
-            <h5>Call</h5>
-            <p>
-              +1 111 9998 7774<br> +1 245 4544 6855
-
-            </p>
-          </div>
-        </div>
-        <div class="col-md-4">
+          <div class=center-block>
           <div class="contact-widget wow bounceInRight">
             <i class="fa fa-envelope fa-4x"></i>
-            <h5>Email us</h5>
+            <h5>Mon mail</h5>
             <p>
-              hello@alstarstudio.com<br />sales@alstarstudio.com
+              paul.pont1@yahoo.com<br />
             </p>
           </div>
-        </div>
-      </div>
-      <div class="row mar-top30">
-        <div class="col-md-12">
-          <h5>We're on social networks</h5>
-          <ul class="social-network">
-            <li><a href="#">
-                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span></a>
-            </li>
-            <li><a href="#">
-                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-dribbble fa-stack-1x fa-inverse"></i>
-                </span></a>
-            </li>
-            <li><a href="#">
-                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span></a>
-            </li>
-            <li><a href="#">
-                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
-                </span></a>
-            </li>
-          </ul>
+          </div>
         </div>
       </div>
     </div>
