--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
           <!-- Slide 1 -->
           <div class="item active">
-            <div class="carousel-background"><img src="img/intro/1.jpg" alt=""></div>
+            <div class="carousel-background"><img src="img/intro/avatar.png" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animated fadeInDown">Paul Pont</h2>
@@ -128,7 +128,7 @@
 
 
           <p style="text-align:justify">
-             Actuellement étudiant en deuxième année en DUT Informatique à l'IUT de Limoges, je vais faire un stage en Écosse, portant sur la création d'un jumeau numérique sémantique d'un bâtiment intelligent. Les technologies utilisées seront donc le Web Sémantique, le développement web et les API des capteurs. Je compte faire une Licence 3  et le Master Cryptis (en sécurité informatique) à l'université de Limoges.
+             Actuellement étudiant en deuxième année en DUT Informatique à l'IUT de Limoges, je devais faire un stage en Écosse, portant sur la création d'un jumeau numérique sémantique d'un bâtiment intelligent. Les technologies utilisées seront donc le Web Sémantique, le développement web et les API des capteurs. Je compte faire une Licence 3  et le Master Cryptis (en sécurité informatique) à l'université de Limoges.
           </p>
         </div>
       </div>
