--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
               </a>
             </li>
             <li>
-              <a href="#" data-largesrc="img/works/LOR.jpg" data-title="Limoges Opéra rock" data-description="J'ai travaillé pour le Limoges Opéra Rock qui est un spectacle musical pour faire de la distributions de flyer, et la vente de produits lors du spectacle.">
+              <a href="#" data-largesrc="img/works/LOR.jpg" data-title="Limoges Opéra rock" data-description="J'ai travaillé pour le Limoges Opéra Rock qui est un spectacle musical pour faire de la distribution de flyer, et la vente de produits lors du spectacle.">
                 <img src="img/works/thumbs/LOR.jpg" alt="img01" />
               </a>
             </li>
