--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
           <div class=center-block>
           <div class="contact-widget wow bounceInRight">
             <i class="fa fa-envelope fa-4x"></i>
-            <h5>Mon mail</h5>
+            <h5>Mail</h5>
             <p>
               paul.pont1@yahoo.com<br />
             </p>
