correction faute orthographe

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
           <div class="section-heading">
             <h2>Me contacter</h2>
             <div class="heading-line"></div>
-            <p>Pour des raisons de vie privée et d’anonymat, le nom utilisé sur ce site et un alias. Si vous êtes une entreprise, un recruteur ou toute personne intéressée par mon profil, je vous remercie de bien vouloir me contacter à cette adresse paul.pont1@yahoo.com pour que nous puissions organiser un entretien physique ou vidéo, et/ou pour que je puisse vous faire suivre mes certifications authentiques avec plaisir. </p>
+            <p>Pour des raisons de vie privée et d’anonymat, le nom utilisé sur ce site est un alias. Si vous êtes une entreprise, un recruteur ou toute personne intéressée par mon profil, je vous remercie de bien vouloir me contacter à cette adresse paul.pont1@yahoo.com pour que nous puissions organiser un entretien physique ou vidéo, et/ou pour que je puisse vous faire suivre mes certifications authentiques avec plaisir. </p>
           </div>
         </div>
       </div>
