--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <!-- Logo text or image -->
         <a class="navbar-brand" href="index.html">Paul</a>
 
+
       </div>
       <div class="navigation collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
@@ -45,6 +46,7 @@
           <li><a href="#portfolio">Experiences</a></li>
           <li><a href="#team">CV</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a href="indexA.html">Version anglaise</a></li>
         </ul>
       </div>
     </div>
@@ -175,8 +177,7 @@
                   <div class="col-sm-12 col-md-offset-1 col-md-6">
                     <div class="wow bounceInLeft">
                       <h4>Coursera-EPFL: Introduction à la programmation orientée objet Java</h4>
-                      <p>Deuxième certification obtenue, cette fois si sur un apprentissage plus poussé en orienté objet, toujours en java.</p>
-                    </div>
+                      <p>Deuxième certification obtenue, cette fois si sur un apprentissage plus poussé en orienté objet, toujours en java.</div>
                   </div>
                   <div class="col-sm-12 col-md-5">
                     <div class="screenshot wow bounceInRight">
@@ -190,8 +191,7 @@
                   <div class="col-sm-12 col-md-offset-1 col-md-6">
                     <div class="wow bounceInLeft">
                       <h4>Web sémantique et web de données</h4>
-                      <p>J'ai fait ma dernière certification pour me préparer à un stage en écosse, elle porte sur les bases de la programmation en web sémantique et est délivrée par le site FUN-MOOC (fun-mooc.fr). </p>
-                    </div>
+                      <p>J'ai fait ma dernière certification pour me préparer à un stage en écosse, elle porte sur les bases de la programmation en web sémantique et est délivrée par le site FUN-MOOC (fun-mooc.fr).</div>
                   </div>
                   <div class="col-sm-12 col-md-5">
                     <div class="screenshot wow bounceInRight">
